force-app/main/default/objects/Process_Log__c/Process_Log__c.object-meta.xml
<CustomObject>
    <label>Process Log</label>
    <pluralLabel>Process Logs</pluralLabel>
    <nameField>
        <label>Process Log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>