force-app/main/default/objects/Process_Log__c/fields/Finished_At__c.field-meta.xml
<CustomField>
    <fullName>Finished_At__c</fullName>
    <label>Finished At</label>
    <type>DateTime</type>

</CustomField>