force-app/main/default/objects/Process_Log__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <label>Started At</label>
    <type>DateTime</type>

</CustomField>